# contourusv

./: .gitignore  .pre-commit-config.yaml  README.md  preprocessing.md  pyproject.toml
.github/workflows/: build_docs.yml  check_linting.yml  pypi.yml  test.yml
contourusv/: contour_detection.py  datasets.py  detection.py  evaluation.py  evaluation_of_all_experiments.py  generate_annotation.py  main.py  preprocessing.py
contourusv/contourusv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
contourusv/tests/: test_detection.py
docs/: .buildinfo  .buildinfo.bak  conf.py  contourusv.html  detection.html  evaluation.html  generate_annotation.html  genindex.html  index.html  index.rst  main.html  modules.html  objects.inv  preprocessing.html  py-modindex.html  search.html  searchindex.js  src.html
docs/.doctrees/: contourusv.doctree  detection.doctree  environment.pickle  evaluation.doctree  generate_annotation.doctree  index.doctree  main.doctree  modules.doctree  preprocessing.doctree  src.doctree
docs/_modules/: detection.html  evaluation.html  generate_annotation.html  index.html  main.html  preprocessing.html
docs/_sources/: contourusv.rst.txt  index.rst.txt  src.rst.txt
pages/: index.html  main.html  searchindex.js
pages/.doctrees/: environment.pickle  modules.doctree
pages/_modules/: preprocessing.html
sphinx/: conf.py  contourusv.rst  index.rst  modules.rst  src.rst
src/: detection.py  evaluation.py  generate_annotation.py  generate_spectrogram.py  main.py  paired_ttest.py  preprocessing.py  spectrogram.py  test.py  test2.py
(+54 files in other folders)
