[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contourusv"
version = "0.1.0"
description = "USV Detection Pipeline"
authors = [
    { name = "Sabah Anis", email = "sabahanis98@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

# List all required runtime dependencies here
[project.dependencies]
numpy = "*"
mne = "*"
matplotlib = "*"
scipy = "*"
pandas = "*"
opencv-python = "*"
tqdm = "*"
codecarbon = "*"
seaborn = "*"
pillow = "*"